remove OAuth2 authorization generation
