# src/server.ts
@@ -13,7 +13,7 @@ import { Config } from './global/Config';
 import { customErrorHandler } from './middleware/customErrorHandler';
 import { customRateLimiter } from './middleware/customRateLimiter';
 import { EntryStates } from './shared/Types/Entries';
-import { discordLogin, discordLoginComplete, discordLogout, discordRefresh } from './handlers/loginProcess';
+import { discordLogin, discordLogout, discordRefresh } from './handlers/loginProcess';
 import { getAllStaff, getAllUsers, getUserById, patchUserPerms } from './handlers/userManagement';
 import {
     deleteOptOut,
@@ -31,6 +31,7 @@ import {
     getOptOutEntries,
     getSelfPendingEntries,
 } from './handlers/core';
+import { join } from 'path';
 
 // eslint-disable-next-line @typescript-eslint/no-var-requires
 const apiSpec = require(`../openapi.json`);
@@ -43,7 +44,6 @@ app.set(`trust proxy`, Config.numProxies);
 {
     app.use(cors());
     app.use(express.json());
-
     // applied before ratelimiting because we don't ratelimit these (and only these) endpoints
     app.use(`/spec`, express.static(`openapi.json`));
     app.use(`/api-docs`, swaggerUi.serve, swaggerUi.setup(apiSpec));
@@ -79,15 +79,15 @@ app.set(`trust proxy`, Config.numProxies);
 
     // user management
     app.get(`/staff`, getAllStaff);
-    app.get(`/users/:id`, getUserById);
     app.patch(`/users/:id/perms`, patchUserPerms);
+    app.get(`/users/:id`, getUserById);
     app.get(`/users`, getAllUsers);
 
     // login process
-    app.get(`/discord/login`, discordLogin);
     app.get(`/discord/logout`, discordLogout);
     app.get(`/discord/refresh`, discordRefresh);
-    app.get(`/discord/login-complete`, discordLoginComplete);
+    app.get(`/discord/login`, discordLogin);
+    app.use(`/discord/example`, express.static(join(`src`, `handlers`, `loginProcess`, `example.html`)));
 
     // entry modification
     app.patch(`/entries/:id/likes`, likeEntry);
